package eapli.base.app.backoffice.console.presentation.warehouseuser;

import eapli.base.warehousemanagement.application.OrderAGVAssignmentController;
import eapli.framework.io.util.Console;
import eapli.framework.presentation.console.AbstractUI;

import java.awt.*;

public class OrderAGVAssignmentUI extends AbstractUI {
    @Override
    protected boolean doShow() {
            String orderId;
                orderId=Console.readLine("Please introduce the id of the order to assign to the AGV, when available");
                validateId(orderId);
                //valid id at this point
                System.out.println("Your request was successful! The information regarding the AGV responsible for this order is:\n" + OrderAGVAssignmentController.assigntasktoaagv(orderId));
            /*case "2":
                orderId=Console.readLine("Please introduce the id of the order to immediately assign to the AGV");
                validateId(orderId);
                //valid id at this point
                if(OrderAGVAssignmentController.assigntaskimmediatlytoagv(orderId).equals("Null")){
                    System.out.println("Currently we cannot assign a task immediately to an AGV as all our AGVs doing some sort of task.");
                }
                else{
                    System.out.println("Your request was successful! The information regarding the AGV responsible for this order is:\n"+OrderAGVAssignmentController.assigntaskimmediatlytoagv(orderId));
                }
                break;
        }*/
        return true;
    }

    private void validateId(String orderId) {
        while (!OrderAGVAssignmentController.existsOrderId(orderId)||!OrderAGVAssignmentController.isValidId(orderId)){
            if(!OrderAGVAssignmentController.existsOrderId(orderId)){
                System.out.println("The order you are trying to enter doesn't exist. If you need you can check the list of the order ids.\n");
            }
            if(!OrderAGVAssignmentController.isValidId(orderId)){
                System.out.println("The id of the order you are trying to enter doesn't match the criteria to be an acceptable id.\n");
            }
            orderId= Console.readLine("Please introduce a new id.");
        }
    }

    @Override
    public String headline() {
        return "Order Assignment";
    }
}
